--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
   border-bottom:2px solid #1976d2; 
   padding-bottom:5px; 
 }
-.sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; }
+.sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
 .sidebar a:hover { color:#1976d2; }
 .sidebar button { 
   width:100%; 
@@ -60,84 +60,97 @@ header {
   align-items:center;
   gap:30px;
   margin-bottom:40px;
+  flex-wrap:wrap;
   padding:20px 30px;
   border-radius:15px;
   background: linear-gradient(135deg, #2196f3, #64b5f6);
-  color: #fff;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+  color:#fff;
+  box-shadow:0 8px 25px rgba(0,0,0,0.2);
+  border:2px solid #1976d2;
 }
-header img { height:140px; border-radius:12px; border:3px solid #fff; }
-header h1 { font-size:2.8rem; }
-header p { font-size:1.3rem; color:#e0f7fa; }
+header img {
+  height:140px;
+  border-radius:12px;
+  border:3px solid #fff;
+}
+header h1 {
+  font-size:2.8rem;
+  text-shadow:1px 1px 4px rgba(0,0,0,0.4);
+}
+header p {
+  font-size:1.3rem;
+  color:#e0f7fa;
+}
 
 /* Sections */
 section { margin-bottom:50px; }
-section h2 { 
-  color:#1976d2; 
-  margin-bottom:20px; 
-  font-size:1.8rem; 
-  border-bottom:2px solid #1976d2; 
-  display:inline-block; 
+section h2 {
+  color:#1976d2;
+  margin-bottom:20px;
+  font-size:1.8rem;
+  border-bottom:2px solid #1976d2;
+  display:inline-block;
+  padding-bottom:4px;
 }
 
-/* Grids */
+/* Cards */
 .features, .videos, .resources {
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
   gap:25px;
-  align-items:stretch;
 }
 
-/* Box */
+/* ⬅️ تنسيق الفيديوهات (الإضافة المطلوبة فقط) */
+.videos {
+  align-items: stretch;
+}
+
 .box {
-  background: linear-gradient(145deg, #e3f2fd, #bbdefb);
+  background: linear-gradient(145deg,#e3f2fd,#bbdefb);
   padding:20px;
   border-radius:15px;
   box-shadow:0 8px 20px rgba(0,0,0,0.08);
+  transition:all 0.3s ease;
+  position:relative;
+
   display:flex;
   flex-direction:column;
-  height:100%;
-  position:relative;
+}
+.box:hover {
+  transform:translateY(-6px);
+  box-shadow:0 12px 30px rgba(0,0,0,0.2);
+  background: linear-gradient(145deg,#bbdefb,#90caf9);
 }
 
-/* ✅ FIX: عنوان الفيديو */
+/* ⬅️ تثبيت ارتفاع العنوان */
 .box h3 {
   font-size:1.2rem;
   color:#0d47a1;
   margin-bottom:10px;
   line-height:1.3;
-  min-height:52px;                 /* يمنع اختلاف الارتفاع */
+  min-height:48px;
   overflow:hidden;
-  display:-webkit-box;
-  -webkit-line-clamp:2;            /* سطرين كحد أقصى */
-  -webkit-box-orient:vertical;
 }
 
-/* ✅ FIX: فيديو بنسبة ثابتة */
-.video-frame {
-  position:relative;
+.box p { font-size:0.95rem; color:#444; }
+
+iframe {
   width:100%;
-  padding-top:56.25%;              /* 16:9 */
-  margin-bottom:12px;
-}
-.video-frame iframe {
-  position:absolute;
-  inset:0;
-  width:100%;
-  height:100%;
+  height:280px;
   border-radius:12px;
+  margin:10px 0;
 }
 
-/* Button */
 .box a.button {
-  margin-top:auto;                 /* الزر دائمًا أسفل */
+  margin-top:auto;
+  display:inline-block;
   background:#1976d2;
   color:#fff;
-  text-decoration:none;
-  padding:10px 15px;
+  padding:10px;
   border-radius:8px;
   text-align:center;
   font-weight:bold;
+  text-decoration:none;
 }
 .box a.button:hover { background:#0d47a1; }
 
@@ -151,8 +164,8 @@ section h2 {
   border:none;
   border-radius:5px;
   padding:5px 8px;
-  cursor:pointer;
   display:none;
+  cursor:pointer;
 }
 
 /* Footer */
@@ -161,13 +174,14 @@ footer {
   color:#fff;
   text-align:center;
   padding:25px;
+  font-size:0.9rem;
 }
 
 /* Responsive */
 @media(max-width:992px){
   body { flex-direction:column; }
-  .sidebar { width:100%; height:auto; border-right:none; border-bottom:3px solid #1976d2; }
-  header { justify-content:center; text-align:center; }
+  .sidebar { width:100%; height:auto; }
+  header { text-align:center; justify-content:center; }
 }
 </style>
 </head>
@@ -185,9 +199,9 @@ footer {
 
   <button id="showFormBtn">إضافة فيديو جديد</button>
 
-  <div id="videoForm">
-    <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
-    <input type="text" id="videoURL" placeholder="رابط YouTube">
+  <div id="videoForm" style="display:none;">
+    <input id="videoTitle" placeholder="عنوان الفيديو">
+    <input id="videoURL" placeholder="رابط YouTube">
     <button id="addVideoBtn">إضافة الفيديو</button>
   </div>
 </div>
@@ -195,56 +209,90 @@ footer {
 <main>
 
 <header>
-  <img src="logo.png" alt="Spoken Arabic Now Logo">
+  <img src="logo.png">
   <div>
     <h1>Spoken Arabic Now</h1>
     <p>Learn Egyptian Arabic. Speak like real people.</p>
   </div>
 </header>
 
+<section id="about">
+  <h2>About This Website</h2>
+  <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic.</p>
+</section>
+
+<section id="lessons">
+  <h2>What You Will Learn</h2>
+  <div class="features">
+    <div class="box"><h3>Everyday Conversations</h3><p>Real phrases used daily.</p></div>
+    <div class="box"><h3>Pronunciation</h3><p>How Egyptians actually speak.</p></div>
+    <div class="box"><h3>Confidence</h3><p>Speak naturally.</p></div>
+  </div>
+</section>
+
 <section id="videos">
   <h2>Video Lessons</h2>
   <div class="videos" id="videoList"></div>
 </section>
 
+<section id="resources">
+  <h2>Downloadable Resources</h2>
+  <div class="resources">
+    <div class="box"><h3>PDF Lesson 1</h3><a class="button">Download</a></div>
+    <div class="box"><h3>PDF Lesson 2</h3><a class="button">Download</a></div>
+  </div>
+</section>
+
+<section id="egyptian">
+  <h2>Why Egyptian Arabic?</h2>
+  <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
+  <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p>
+    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
+    Email: spokenarabicnow@gmail.com
+  </p>
+</section>
+
 <footer>
-  <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
+  &copy; 2026 Spoken Arabic Now
 </footer>
 
+</main>
+
 <script>
-const PASSWORD = "1234";
-let isAdmin = false;
+const PASSWORD="1234";
+let isAdmin=false;
+const videoList=document.getElementById("videoList");
+const showFormBtn=document.getElementById("showFormBtn");
+const videoForm=document.getElementById("videoForm");
+const addVideoBtn=document.getElementById("addVideoBtn");
+const titleInput=document.getElementById("videoTitle");
+const urlInput=document.getElementById("videoURL");
 
-const showFormBtn = document.getElementById('showFormBtn');
-const videoForm = document.getElementById('videoForm');
-const addVideoBtn = document.getElementById('addVideoBtn');
-const videoTitleInput = document.getElementById('videoTitle');
-const videoURLInput = document.getElementById('videoURL');
-const videoList = document.getElementById('videoList');
+let videos=JSON.parse(localStorage.getItem("videos"))||[];
 
-let videos = JSON.parse(localStorage.getItem('videos')) || [];
-
-function createVideoElement(video) {
-  const box = document.createElement('div');
-  box.classList.add('box');
-  box.innerHTML = `
-    <h3>${video.title}</h3>
-    <div class="video-frame">
-      <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
-    </div>
-    <a class="button" href="${video.url}" target="_blank">شاهد على يوتيوب</a>
-    <button class="deleteBtn">حذف الفيديو</button>
-  `;
-  const deleteBtn = box.querySelector('.deleteBtn');
-  if(isAdmin) deleteBtn.style.display = "block";
-  videoList.appendChild(box);
+function createVideo(v){
+  const d=document.createElement("div");
+  d.className="box";
+  d.innerHTML=`
+    <h3>${v.title}</h3>
+    <iframe src="https://www.youtube.com/embed/${v.id}"></iframe>
+    <a class="button" href="${v.url}" target="_blank">Watch on YouTube</a>
+    <button class="deleteBtn">حذف</button>`;
+  if(isAdmin)d.querySelector(".deleteBtn").style.display="block";
+  videoList.appendChild(d);
 }
-
-videos.forEach(v => createVideoElement(v));
+videos.forEach(createVideo);
 </script>
 
 </body>
 </html>
+
+
 
 
 
