--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
-
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 
@@ -51,10 +50,17 @@ body {
   font-weight:bold;
 }
 
-/* Main */
+/* Main content */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
 
 /* Header */
+header { display:flex; align-items:center; gap:30px; margin-bottom:30px; flex-wrap:wrap; }
+header img { height:130px; width:auto; border-radius:12px; border:3px solid #1976d2; }
+header div h1 { font-size:2.4rem; color:#0d47a1; margin-bottom:8px; }
+header div p { font-size:1.2rem; color:#555; }
+
+
+  /* Header */
 header {
   display:flex;
   align-items:center;
@@ -64,97 +70,92 @@ header {
   padding:20px 30px;
   border-radius:15px;
   background: linear-gradient(135deg, #2196f3, #64b5f6);
-  color:#fff;
-  box-shadow:0 8px 25px rgba(0,0,0,0.2);
-  border:2px solid #1976d2;
+  color: #fff;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+  border: 2px solid #1976d2;
 }
 header img {
   height:140px;
+  width:auto;
   border-radius:12px;
   border:3px solid #fff;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
 }
-header h1 {
+header div h1 {
   font-size:2.8rem;
-  text-shadow:1px 1px 4px rgba(0,0,0,0.4);
+  color:#fff;
+  margin-bottom:8px;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
 }
-header p {
+header div p {
   font-size:1.3rem;
   color:#e0f7fa;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+}
+
+/* Responsive */
+@media(max-width:992px){
+  header { justify-content:center; text-align:center; padding:15px 20px; }
+  header div h1 { font-size:2.2rem; }
+  header div p { font-size:1.1rem; }
+  header img { height:120px; }
 }
 
 /* Sections */
 section { margin-bottom:50px; }
-section h2 {
-  color:#1976d2;
-  margin-bottom:20px;
-  font-size:1.8rem;
-  border-bottom:2px solid #1976d2;
-  display:inline-block;
-  padding-bottom:4px;
+section h2 { 
+  color: #1976d2; 
+  margin-bottom:20px; 
+  font-size:1.8rem; 
+  border-bottom: 2px solid #1976d2; 
+  display:inline-block; 
+  padding-bottom:4px; 
 }
 
-/* Cards */
-.features, .videos, .resources {
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:25px;
-}
-
-/* ⬅️ تنسيق الفيديوهات (الإضافة المطلوبة فقط) */
-.videos {
-  align-items: stretch;
-}
-
+/* Boxes with gradient hover */
+.features, .videos, .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
 .box {
-  background: linear-gradient(145deg,#e3f2fd,#bbdefb);
+  background: linear-gradient(145deg, #e3f2fd, #bbdefb);
   padding:20px;
   border-radius:15px;
-  box-shadow:0 8px 20px rgba(0,0,0,0.08);
-  transition:all 0.3s ease;
-  position:relative;
-
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
   display:flex;
   flex-direction:column;
+  justify-content:space-between;
+  position:relative;
 }
-.box:hover {
-  transform:translateY(-6px);
-  box-shadow:0 12px 30px rgba(0,0,0,0.2);
-  background: linear-gradient(145deg,#bbdefb,#90caf9);
+.box:hover { 
+  transform: translateY(-6px); 
+  box-shadow: 0 12px 30px rgba(0,0,0,0.2); 
+  background: linear-gradient(145deg, #bbdefb, #90caf9);
 }
-
-/* ⬅️ تثبيت ارتفاع العنوان */
-.box h3 {
-  font-size:1.2rem;
-  color:#0d47a1;
-  margin-bottom:10px;
-  line-height:1.3;
-  min-height:48px;
-  overflow:hidden;
-}
-
-.box p { font-size:0.95rem; color:#444; }
-
-iframe {
-  width:100%;
-  height:280px;
-  border-radius:12px;
-  margin:10px 0;
-}
-
+.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; }
+.box:hover h3 { color:#0b3d91; }
+.box p { flex-grow:1; margin-bottom:12px; color:#444; font-size:0.95rem; }
 .box a.button {
-  margin-top:auto;
-  display:inline-block;
-  background:#1976d2;
+  background-color:#1976d2;
   color:#fff;
-  padding:10px;
+  text-decoration:none;
+  padding:10px 15px;
   border-radius:8px;
   text-align:center;
   font-weight:bold;
-  text-decoration:none;
+  transition: background-color 0.3s ease;
 }
-.box a.button:hover { background:#0d47a1; }
+.box a.button:hover { background-color:#0d47a1; }
+iframe { width:100%; height:280px; border-radius:12px; }
 
-/* Delete */
+/* Footer */
+footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
+footer a { color:#1976d2; text-decoration:none; }
+
+/* Form */
+#videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
+#videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
+#videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
+
+/* Delete button */
 .deleteBtn {
   position:absolute;
   top:10px;
@@ -164,30 +165,22 @@ iframe {
   border:none;
   border-radius:5px;
   padding:5px 8px;
-  display:none;
   cursor:pointer;
-}
-
-/* Footer */
-footer {
-  background:#1e1e1e;
-  color:#fff;
-  text-align:center;
-  padding:25px;
-  font-size:0.9rem;
+  display:none;
 }
 
 /* Responsive */
 @media(max-width:992px){
   body { flex-direction:column; }
-  .sidebar { width:100%; height:auto; }
-  header { text-align:center; justify-content:center; }
+  .sidebar { width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #1976d2; }
+  main { padding:20px; }
+  header { justify-content:center; text-align:center; }
 }
 </style>
 </head>
-
 <body>
 
+<!-- Sidebar -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -199,17 +192,16 @@ footer {
 
   <button id="showFormBtn">إضافة فيديو جديد</button>
 
-  <div id="videoForm" style="display:none;">
-    <input id="videoTitle" placeholder="عنوان الفيديو">
-    <input id="videoURL" placeholder="رابط YouTube">
-    <button id="addVideoBtn">إضافة الفيديو</button>
+  <div id="videoForm">
+      <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
+      <input type="text" id="videoURL" placeholder="رابط YouTube">
+      <button id="addVideoBtn">إضافة الفيديو</button>
   </div>
 </div>
 
 <main>
-
 <header>
-  <img src="logo.png">
+  <img src="logo.png" alt="Spoken Arabic Now Logo">
   <div>
     <h1>Spoken Arabic Now</h1>
     <p>Learn Egyptian Arabic. Speak like real people.</p>
@@ -224,9 +216,18 @@ footer {
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
-    <div class="box"><h3>Everyday Conversations</h3><p>Real phrases used daily.</p></div>
-    <div class="box"><h3>Pronunciation</h3><p>How Egyptians actually speak.</p></div>
-    <div class="box"><h3>Confidence</h3><p>Speak naturally.</p></div>
+    <div class="box">
+      <h3>Everyday Conversations</h3>
+      <p>Real Egyptian phrases used in daily situations, not formal Arabic.</p>
+    </div>
+    <div class="box">
+      <h3>Egyptian Pronunciation</h3>
+      <p>Learn how Egyptians actually pronounce words, sounds, and letters.</p>
+    </div>
+    <div class="box">
+      <h3>Speak with Confidence</h3>
+      <p>Stop translating in your head and start speaking naturally.</p>
+    </div>
   </div>
 </section>
 
@@ -238,8 +239,16 @@ footer {
 <section id="resources">
   <h2>Downloadable Resources</h2>
   <div class="resources">
-    <div class="box"><h3>PDF Lesson 1</h3><a class="button">Download</a></div>
-    <div class="box"><h3>PDF Lesson 2</h3><a class="button">Download</a></div>
+    <div class="box">
+      <h3>PDF Lesson 1</h3>
+      <p>Download phrases and vocabulary for Lesson 1.</p>
+      <a class="button" href="lesson1.pdf" download>Download PDF</a>
+    </div>
+    <div class="box">
+      <h3>PDF Lesson 2</h3>
+      <p>Download phrases and vocabulary for Lesson 2.</p>
+      <a class="button" href="lesson2.pdf" download>Download PDF</a>
+    </div>
   </div>
 </section>
 
@@ -258,11 +267,8 @@ footer {
 </section>
 
 <footer>
-  &copy; 2026 Spoken Arabic Now
+  <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
-
-</main>
-
 
 <script>
 const PASSWORD = "1234";
@@ -334,8 +340,10 @@ addVideoBtn.addEventListener('click', () => {
   videoURLInput.value = "";
 });
 </script>
+
 </body>
 </html>
+
 
 
 
