--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -54,6 +55,12 @@ body {
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
 
 /* Header */
+header { display:flex; align-items:center; gap:30px; margin-bottom:30px; flex-wrap:wrap; }
+header img { height:130px; width:auto; border-radius:12px; border:3px solid #1976d2; }
+header div h1 { font-size:2.4rem; color:#0d47a1; margin-bottom:8px; }
+header div p { font-size:1.2rem; color:#555; }
+
+/* Header */
 header {
   display:flex;
   align-items:center;
@@ -72,14 +79,26 @@ header img {
   width:auto;
   border-radius:12px;
   border:3px solid #fff;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
 }
 header div h1 {
   font-size:2.8rem;
+  color:#fff;
   margin-bottom:8px;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
 }
 header div p {
   font-size:1.3rem;
   color:#e0f7fa;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+}
+
+/* Responsive */
+@media(max-width:992px){
+  header { justify-content:center; text-align:center; padding:15px 20px; }
+  header div h1 { font-size:2.2rem; }
+  header div p { font-size:1.1rem; }
+  header img { height:120px; }
 }
 
 /* Sections */
@@ -93,40 +112,38 @@ section h2 {
   padding-bottom:4px; 
 }
 
-/* Grid */
-.features, .videos, .resources {
-  display:grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
-  gap:25px;
-}
-
-/* Box */
+/* Boxes with gradient hover */
+.features, .videos, .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
 .box {
   background: linear-gradient(145deg, #e3f2fd, #bbdefb);
   padding:20px;
   border-radius:15px;
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
   display:flex;
   flex-direction:column;
+  justify-content:flex-start;
+  align-items:center;
   position:relative;
 }
-
-/* ✅ توحيد ارتفاع العنوان */
-#videos .box h3 {
-  min-height: 48px;
-  margin-bottom:12px;
-  color:#0d47a1;
-  font-size:1.2rem;
-  line-height:1.3;
+.box:hover { 
+  transform: translateY(-6px); 
+  box-shadow: 0 12px 30px rgba(0,0,0,0.2); 
+  background: linear-gradient(145deg, #bbdefb, #90caf9);
 }
+.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; text-align:center; }
+.box:hover h3 { color:#0b3d91; }
+.box p { flex-grow:1; margin-bottom:12px; color:#444; font-size:0.95rem; text-align:center; }
+iframe { width:100%; height:200px; border-radius:12px; object-fit:cover; }
 
-/* ✅ تثبيت مساحة الفيديو */
-#videos iframe {
-  width:100%;
-  aspect-ratio: 16 / 9;
-  border-radius:12px;
-  border:none;
-}
+/* Footer */
+footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
+footer a { color:#1976d2; text-decoration:none; }
+
+/* Form */
+#videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
+#videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
+#videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
 
 /* Delete button */
 .deleteBtn {
@@ -142,25 +159,18 @@ section h2 {
   display:none;
 }
 
-/* Footer */
-footer {
-  background: #1e1e1e;
-  color: #fff;
-  text-align:center;
-  padding:25px;
-}
-
 /* Responsive */
 @media(max-width:992px){
   body { flex-direction:column; }
-  .sidebar { width:100%; height:auto; }
+  .sidebar { width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #1976d2; }
   main { padding:20px; }
+  header { justify-content:center; text-align:center; }
 }
 </style>
 </head>
-
 <body>
 
+<!-- Sidebar -->
 <div class="sidebar">
   <h2>Navigation</h2>
   <a href="#about">About</a>
@@ -173,56 +183,151 @@ footer {
   <button id="showFormBtn">إضافة فيديو جديد</button>
 
   <div id="videoForm">
-    <input id="videoTitle" placeholder="عنوان الفيديو">
-    <input id="videoURL" placeholder="رابط YouTube">
-    <button id="addVideoBtn">إضافة الفيديو</button>
+      <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
+      <input type="text" id="videoURL" placeholder="رابط YouTube">
+      <button id="addVideoBtn">إضافة الفيديو</button>
   </div>
 </div>
 
 <main>
-
 <header>
-  <img src="logo.png">
+  <img src="logo.png" alt="Spoken Arabic Now Logo">
   <div>
     <h1>Spoken Arabic Now</h1>
     <p>Learn Egyptian Arabic. Speak like real people.</p>
   </div>
 </header>
 
+<section id="about">
+  <h2>About This Website</h2>
+  <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic.</p>
+</section>
+
+<section id="lessons">
+  <h2>What You Will Learn</h2>
+  <div class="features">
+    <div class="box">
+      <h3>Everyday Conversations</h3>
+      <p>Real Egyptian phrases used in daily situations, not formal Arabic.</p>
+    </div>
+    <div class="box">
+      <h3>Egyptian Pronunciation</h3>
+      <p>Learn how Egyptians actually pronounce words, sounds, and letters.</p>
+    </div>
+    <div class="box">
+      <h3>Speak with Confidence</h3>
+      <p>Stop translating in your head and start speaking naturally.</p>
+    </div>
+  </div>
+</section>
+
 <section id="videos">
   <h2>Video Lessons</h2>
   <div class="videos" id="videoList"></div>
 </section>
 
+<section id="resources">
+  <h2>Downloadable Resources</h2>
+  <div class="resources">
+    <div class="box">
+      <h3>PDF Lesson 1</h3>
+      <p>Download phrases and vocabulary for Lesson 1.</p>
+      <a class="button" href="lesson1.pdf" download>Download PDF</a>
+    </div>
+    <div class="box">
+      <h3>PDF Lesson 2</h3>
+      <p>Download phrases and vocabulary for Lesson 2.</p>
+      <a class="button" href="lesson2.pdf" download>Download PDF</a>
+    </div>
+  </div>
+</section>
+
+<section id="egyptian">
+  <h2>Why Egyptian Arabic?</h2>
+  <p>Egyptian Arabic is the most widely understood dialect in the Arab world. Learning it allows you to communicate with millions of people across different countries.</p>
+  <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p>
+    YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
+    Email: spokenarabicnow@gmail.com
+  </p>
+</section>
+
 <footer>
-  &copy; 2026 Spoken Arabic Now
+  <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
 <script>
-const PASSWORD="1234";
-let isAdmin=false;
+const PASSWORD = "1234";
+let isAdmin = false;
 
-const videoList=document.getElementById("videoList");
-const showFormBtn=document.getElementById("showFormBtn");
-const videoForm=document.getElementById("videoForm");
-const addVideoBtn=document.getElementById("addVideoBtn");
-const titleInput=document.getElementById("videoTitle");
-const urlInput=document.getElementById("videoURL");
+const showFormBtn = document.getElementById('showFormBtn');
+const videoForm = document.getElementById('videoForm');
+const addVideoBtn = document.getElementById('addVideoBtn');
+const videoTitleInput = document.getElementById('videoTitle');
+const videoURLInput = document.getElementById('videoURL');
+const videoList = document.getElementById('videoList');
 
-let videos=JSON.parse(localStorage.getItem("videos"))||[];
+let videos = JSON.parse(localStorage.getItem('videos')) || [];
 
-function createVideo(v){
-  const d=document.createElement("div");
-  d.className="box";
-  d.innerHTML=`
-    <h3>${v.title}</h3>
-    <iframe src="https://www.youtube.com/embed/${v.id}" allowfullscreen></iframe>
-    <button class="deleteBtn">حذف</button>
+function createVideoElement(video) {
+  const box = document.createElement('div');
+  box.classList.add('box');
+  box.innerHTML = `
+    <h3>${video.title}</h3>
+    <iframe src="https://www.youtube.com/embed/${video.id}" allowfullscreen></iframe>
+    <button class="deleteBtn">حذف الفيديو</button>
   `;
-  if(isAdmin)d.querySelector(".deleteBtn").style.display="block";
-  videoList.appendChild(d);
+  const deleteBtn = box.querySelector('.deleteBtn');
+  if(isAdmin) deleteBtn.style.display = "block";
+  deleteBtn.addEventListener('click', () => {
+    if(confirm("هل أنت متأكد أنك تريد حذف هذا الفيديو؟")){
+      box.remove();
+      videos = videos.filter(v => v.id !== video.id);
+      localStorage.setItem('videos', JSON.stringify(videos));
+    }
+  });
+  videoList.appendChild(box);
 }
-videos.forEach(createVideo);
+
+videos.forEach(v => createVideoElement(v));
+
+showFormBtn.addEventListener('click', () => {
+  if(!isAdmin){
+    const pass = prompt("أدخل كلمة المرور:");
+    if(pass === PASSWORD){
+      videoForm.style.display = "flex";
+      isAdmin = true;
+      document.querySelectorAll('.deleteBtn').forEach(btn => btn.style.display = "block");
+    } else {
+      alert("كلمة المرور غير صحيحة!");
+    }
+  }
+});
+
+addVideoBtn.addEventListener('click', () => {
+  const title = videoTitleInput.value.trim();
+  const url = videoURLInput.value.trim();
+  if(!title || !url){ alert("يرجى إدخال عنوان الفيديو والرابط!"); return; }
+
+  let videoId = "";
+  if(url.includes("youtu.be/")) videoId = url.split("youtu.be/")[1].split("?")[0];
+  else if(url.includes("youtube.com/watch?v=")) videoId = url.split("v=")[1].split("&")[0];
+  else if(url.includes("youtube.com/shorts/")) videoId = url.split("shorts/")[1].split("?")[0];
+  else { alert("رابط YouTube غير صالح!"); return; }
+
+  const newVideo = { title, url, id: videoId };
+  videos.push(newVideo);
+  localStorage.setItem('videos', JSON.stringify(videos));
+
+  createVideoElement(newVideo);
+
+  videoTitleInput.value = "";
+  videoURLInput.value = "";
+});
 </script>
 
 </body>
