--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -225,63 +224,18 @@ footer a { color:#1976d2; text-decoration:none; }
   <div class="features">
     <div class="box">
       <h3>Everyday Conversations</h3>
-      <p>
-        Ezayak? – How are you?<br>
-        3amel eh? – How’s it going?<br>
-        Sabah el-kheir – Good morning<br>
-        Masa’ el-kheir – Good evening<br>
-        Shokran – Thank you<br>
-        Afwan – You’re welcome / Excuse me<br>
-        La2 – No<br>
-        Aywa – Yes<br>
-        Mafeesh mushkila – No problem<br>
-        Ma3lesh – Sorry / Never mind<br>
-        Ana asif – I’m sorry<br>
-        Momken? – Can I? / Is it possible?<br>
-        Ta3ala – Come here
-      </p>
+      <p>Real Egyptian phrases used in daily situations, not formal Arabic.</p>
     </div>
-
     <div class="box">
       <h3>Egyptian Pronunciation</h3>
-      <p>
-        Eih? – What?<br>
-        Mashi – Okay<br>
-        Balash – Don’t / Stop it<br>
-        3ayez – I want<br>
-        3andak? – Do you have?<br>
-        Ana – I / Me<br>
-        Enta – You (male)<br>
-        Enti – You (female)<br>
-        Homma – They<br>
-        Ana mesh fahim – I don’t understand<br>
-        7ader – Sure / Ready<br>
-        Gamed – Cool / Awesome<br>
-        Asef – Sorry
-      </p>
+      <p>Learn how Egyptians actually pronounce words, sounds, and letters.</p>
     </div>
-
     <div class="box">
       <h3>Speak with Confidence</h3>
-      <p>
-        Momken tsa3edni? – Can you help me?<br>
-        Fein el-hamam? – Where is the bathroom?<br>
-        Helw – Nice / Sweet<br>
-        Gamid – Cool / Awesome<br>
-        Ana 3ayez … – I want …<br>
-        Kam da? – How much is this?<br>
-        Ana gay – I’m coming<br>
-        Ma3lesh, mesh fahim – Sorry, I don’t understand<br>
-        Yimkin – Maybe<br>
-        Momken akhud …? – Can I take …?<br>
-        Shoft …? – Did you see …?<br>
-        Ana gay men … – I come from …<br>
-        Tefaddal – Please / Go ahead
-      </p>
+      <p>Stop translating in your head and start speaking naturally.</p>
     </div>
   </div>
 </section>
-
 
 <section id="videos">
   <h2>Video Lessons</h2>
@@ -394,6 +348,11 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
+
+
+
+
 
 
 
