--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Spoken Arabic Now – Egyptian Dialect</title>
 <style>
+/* ==================================
+   القواعد العامة والتنسيق الأساسي
+================================== */
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
@@ -29,72 +32,26 @@ body {
   overflow-y:auto;
   border-right: 3px solid #1976d2;
 }
-.sidebar h2 { 
-  color:#1976d2; 
-  margin-bottom:20px; 
-  font-size:1.6rem; 
-  border-bottom:2px solid #1976d2; 
-  padding-bottom:5px; 
-}
+.sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
 .sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
 .sidebar a:hover { color:#1976d2; }
-.sidebar button { 
-  width:100%; 
-  padding:10px; 
-  margin-top:20px; 
-  border:none; 
-  border-radius:6px; 
-  background:#0d47a1; 
-  color:#fff; 
-  cursor:pointer; 
-  font-weight:bold;
-}
+.sidebar button { width:100%; padding:10px; margin-top:20px; border:none; border-radius:6px; background:#0d47a1; color:#fff; cursor:pointer; font-weight:bold; }
 
 /* Main content */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
 
 /* Header */
-header { display:flex; align-items:center; gap:30px; margin-bottom:30px; flex-wrap:wrap; }
-header img { height:130px; width:auto; border-radius:12px; border:3px solid #1976d2; }
-header div h1 { font-size:2.4rem; color:#0d47a1; margin-bottom:8px; }
-header div p { font-size:1.2rem; color:#555; }
-
-/* Header */
-header {
-  display:flex;
-  align-items:center;
-  gap:30px;
-  margin-bottom:40px;
-  flex-wrap:wrap;
-  padding:20px 30px;
-  border-radius:15px;
-  background: linear-gradient(135deg, #2196f3, #64b5f6);
-  color: #fff;
-  box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-  border: 2px solid #1976d2;
-}
-header img {
-  height:140px;
-  width:auto;
-  border-radius:12px;
-  border:3px solid #fff;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-}
-header div h1 {
-  font-size:2.8rem;
-  color:#fff;
-  margin-bottom:8px;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
-}
-header div p {
-  font-size:1.3rem;
-  color:#e0f7fa;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
-}
+header { display:flex; align-items:center; gap:30px; margin-bottom:40px; flex-wrap:wrap; padding:20px 30px; border-radius:15px; background: linear-gradient(135deg, #2196f3, #64b5f6); color: #fff; box-shadow: 0 8px 25px rgba(0,0,0,0.2); border: 2px solid #1976d2; }
+header img { height:140px; width:auto; border-radius:12px; border:3px solid #fff; box-shadow: 0 4px 15px rgba(0,0,0,0.15); }
+header div h1 { font-size:2.8rem; color:#fff; margin-bottom:8px; text-shadow: 1px 1px 4px rgba(0,0,0,0.4); }
+header div p { font-size:1.3rem; color:#e0f7fa; text-shadow: 1px 1px 3px rgba(0,0,0,0.3); }
 
 /* Responsive */
 @media(max-width:992px){
-  header { justify-content:center; text-align:center; padding:15px 20px; }
+  body { flex-direction:column; }
+  .sidebar { width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #1976d2; }
+  main { padding:20px; }
+  header { justify-content:center; text-align:center; }
   header div h1 { font-size:2.2rem; }
   header div p { font-size:1.1rem; }
   header img { height:120px; }
@@ -102,14 +59,7 @@ header div p {
 
 /* Sections */
 section { margin-bottom:50px; }
-section h2 { 
-  color: #1976d2; 
-  margin-bottom:20px; 
-  font-size:1.8rem; 
-  border-bottom: 2px solid #1976d2; 
-  display:inline-block; 
-  padding-bottom:4px; 
-}
+section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom: 2px solid #1976d2; display:inline-block; padding-bottom:4px; }
 
 /* Boxes with gradient hover */
 .features, .videos, .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:25px; }
@@ -125,11 +75,7 @@ section h2 {
   align-items:center;
   position:relative;
 }
-.box:hover { 
-  transform: translateY(-6px); 
-  box-shadow: 0 12px 30px rgba(0,0,0,0.2); 
-  background: linear-gradient(145deg, #bbdefb, #90caf9);
-}
+.box:hover { transform: translateY(-6px); box-shadow: 0 12px 30px rgba(0,0,0,0.2); background: linear-gradient(145deg, #bbdefb, #90caf9); }
 
 .box h3 { 
   color:#0d47a1; 
@@ -137,20 +83,20 @@ section h2 {
   font-size:1.2rem; 
   transition: color 0.3s ease; 
   text-align:center; 
-
-  display: -webkit-box;       /* دعم تقليدي لقص النص */
-  -webkit-line-clamp: 2;      /* الحد الأقصى: سطرين */
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;     /* ... إذا تجاوز النص السطرين */
-  word-break: break-word;
+  display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; word-break: break-word;
 }
-
-  
-.box h3 { color:#0d47a1; margin-bottom:10px; font-size:1.2rem; transition: color 0.3s ease; text-align:center; }
 .box:hover h3 { color:#0b3d91; }
+
 .box p { flex-grow:1; margin-bottom:12px; color:#444; font-size:0.95rem; text-align:center; }
+
 iframe { width:100%; height:200px; border-radius:12px; object-fit:cover; }
+
+/* زر Read More */
+.readMoreBtn { padding:8px 12px; border:none; border-radius:5px; background:#1976d2; color:#fff; cursor:pointer; font-weight:bold; margin-top:10px; align-self:flex-start; }
+.readMoreBtn:hover { background:#0d47a1; }
+
+/* المحتوى الموسع Full Content */
+.fullContent { background:#e3f2fd; padding:20px; border-radius:15px; box-shadow:0 8px 20px rgba(0,0,0,0.08); margin-top:20px; display:none; }
 
 /* Footer */
 footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
@@ -162,26 +108,7 @@ footer a { color:#1976d2; text-decoration:none; }
 #videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
 
 /* Delete button */
-.deleteBtn {
-  position:absolute;
-  top:10px;
-  right:10px;
-  background:red;
-  color:#fff;
-  border:none;
-  border-radius:5px;
-  padding:5px 8px;
-  cursor:pointer;
-  display:none;
-}
-
-/* Responsive */
-@media(max-width:992px){
-  body { flex-direction:column; }
-  .sidebar { width:100%; height:auto; position:relative; border-right:none; border-bottom:3px solid #1976d2; }
-  main { padding:20px; }
-  header { justify-content:center; text-align:center; }
-}
+.deleteBtn { position:absolute; top:10px; right:10px; background:red; color:#fff; border:none; border-radius:5px; padding:5px 8px; cursor:pointer; display:none; }
 </style>
 </head>
 <body>
@@ -197,7 +124,6 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#contact">Contact</a>
 
   <button id="showFormBtn">إضافة فيديو جديد</button>
-
   <div id="videoForm">
       <input type="text" id="videoTitle" placeholder="عنوان الفيديو">
       <input type="text" id="videoURL" placeholder="رابط YouTube">
@@ -219,21 +145,41 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>Spoken Arabic Now teaches <strong>Egyptian Spoken Arabic</strong>, not formal or textbook Arabic.</p>
 </section>
 
+<!-- ===============================
+     Lessons Section مع Read More
+================================= -->
 <section id="lessons">
   <h2>What You Will Learn</h2>
   <div class="features">
     <div class="box">
-      <h3>Everyday Conversations</h3>
-      <p>Real Egyptian phrases used in daily situations, not formal Arabic.</p>
+      <h3>Greetings</h3>
+      <p>Hi, Hello, Good morning</p>
+      <button class="readMoreBtn" data-content="full1">Read More</button>
     </div>
     <div class="box">
-      <h3>Egyptian Pronunciation</h3>
-      <p>Learn how Egyptians actually pronounce words, sounds, and letters.</p>
+      <h3>Food & Drink</h3>
+      <p>Ordering, asking prices</p>
+      <button class="readMoreBtn" data-content="full2">Read More</button>
     </div>
     <div class="box">
-      <h3>Speak with Confidence</h3>
-      <p>Stop translating in your head and start speaking naturally.</p>
+      <h3>Transport</h3>
+      <p>Taxi, Bus, Directions</p>
+      <button class="readMoreBtn" data-content="full3">Read More</button>
     </div>
+  </div>
+
+  <!-- المحتوى الموسع Hidden Content -->
+  <div class="fullContent" id="full1">
+    <h3>Greetings - Detailed</h3>
+    <p>Salam Alaikum, Sabah el-kheir, Ezayak? How to greet and respond politely.</p>
+  </div>
+  <div class="fullContent" id="full2">
+    <h3>Food & Drink - Detailed</h3>
+    <p>Ordering food, asking for prices, saying 'Shukran', 'Afwan', typical Egyptian restaurant phrases.</p>
+  </div>
+  <div class="fullContent" id="full3">
+    <h3>Transport - Detailed</h3>
+    <p>Taking taxi, asking for directions, bus tickets, common phrases to move around the city.</p>
   </div>
 </section>
 
@@ -277,6 +223,9 @@ footer a { color:#1976d2; text-decoration:none; }
 </footer>
 
 <script>
+/* ===============================
+       إدارة الفيديوهات
+================================= */
 const PASSWORD = "1234";
 let isAdmin = false;
 
@@ -344,10 +293,27 @@ addVideoBtn.addEventListener('click', () => {
   videoTitleInput.value = "";
   videoURLInput.value = "";
 });
+
+/* ===============================
+       Read More functionality
+================================= */
+document.querySelectorAll('.readMoreBtn').forEach(btn=>{
+  btn.addEventListener('click', ()=>{
+    const contentId = btn.getAttribute('data-content');
+    const contentDiv = document.getElementById(contentId);
+    contentDiv.style.display = contentDiv.style.display === 'block' ? 'none' : 'block';
+    // Scroll إلى المحتوى الموسع عند فتحه
+    if(contentDiv.style.display === 'block'){
+      contentDiv.scrollIntoView({behavior:'smooth'});
+    }
+  });
+});
 </script>
 
 </body>
 </html>
+
+
 
 
 
