--- a/index.html
+++ b/index.html
@@ -264,6 +264,24 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>This platform teaches you how Egyptians really speak — simple, fast, and natural.</p>
 </section>
 
+
+  <!-- قسم العبارات الموسعة قبل Contact -->
+<section id="expandedLessons" style="display:none; margin-bottom:50px;">
+  <h2>All Phrases / كل العبارات</h2>
+  <div class="features">
+    <!-- كل صندوق يحتوي عبارة واحدة أو جملتين -->
+    <div class="box"><h3>Sabah el-kheir</h3><p>Good morning / صباح الخير</p></div>
+    <div class="box"><h3>Ezayak?</h3><p>How are you? / إزيك؟</p></div>
+    <div class="box"><h3>Shokran</h3><p>Thank you / شكراً</p></div>
+    <div class="box"><h3>Ahlan</h3><p>Hello / أهلاً</p></div>
+    <div class="box"><h3>Mashy</h3><p>OK / ماشي</p></div>
+    <div class="box"><h3>Maalesh</h3><p>Never mind / معلش</p></div>
+    <div class="box"><h3>Forsa Saeeda</h3><p>Nice to meet you / فرصة سعيدة</p></div>
+    <div class="box"><h3>Sahtain</h3><p>Bon appétit / صحتين</p></div>
+    <!-- أضف باقي العبارات حسب الحاجة -->
+  </div>
+</section>
+
 <section id="contact">
   <h2>Contact</h2>
   <p>
@@ -348,6 +366,7 @@ addVideoBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
